# fastapi-personik-test

./: .gitignore  Dockerfile  Readme.md  pyproject.toml
src/: config.py  main.py
src/app/: router.py  schemas.py  service.py
tests/: test_app.py
